[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=2]
[ext_resource path="res://scenes/SaveSystem.tscn" type="PackedScene" id=3]

[node name="Pause" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Overlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="CenterContainer" type="CenterContainer" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/CenterContainer"]
margin_left = 428.0
margin_top = 251.0
margin_right = 595.0
margin_bottom = 349.0
custom_constants/separation = 12

[node name="CheckBox" type="CheckBox" parent="Pause/CenterContainer/VBoxContainer"]
margin_right = 167.0
margin_bottom = 44.0
text = "FullScreen"
align = 1

[node name="Konec" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 167.0
margin_bottom = 98.0
text = "Ukonƒçit"

[node name="SaveSystem" parent="Pause" instance=ExtResource( 3 )]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/CheckBox" to="Pause" method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/Konec" to="Pause" method="_on_Konec_pressed"]
